--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,6 +30,8 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  flutter_localizations:
+    sdk: flutter
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
@@ -43,6 +45,18 @@ dependencies:
   flutter_launcher_icons: ^0.14.4
   shared_preferences: ^2.5.3
   uuid: ^4.5.1
+  google_fonts: ^6.2.1
+  dropdown_search: ^6.0.2
+  
+  # Supabase dependencies (Firebase alternative)
+  supabase_flutter: ^2.8.0
+  crypto: ^3.0.5
+  
+  # Keep Firebase dependencies commented for easy switching
+  # firebase_core: ^3.8.0
+  # firebase_auth: ^5.3.3
+  # cloud_firestore: ^5.5.0
+  # firebase_storage: ^12.3.7
 
 dev_dependencies:
   flutter_test:
@@ -54,9 +68,6 @@ dev_dependencies:
   # package. See that file for information about deactivating specific lint
   # rules and activat ing additional ones.
   flutter_lints: ^5.0.0
-  google_fonts: ^6.2.1
-  intl: ^0.19.0
-  dropdown_search: ^6.0.2
 
 flutter_native_splash:
   color: "#ffffff"
